--- a/public/main.css
+++ b/public/main.css
@@ -60,7 +60,7 @@ h1 {
 	/* drop shadow */
 	-webkit-box-shadow:  none;
 	-moz-box-shadow:  none;
-	box-shadow:   none;
+	box-shadow:  none;
 }
 
 .slider {
@@ -69,6 +69,10 @@ h1 {
 
 input.choose {
 	margin:5px 5px 0px 8px;
+}
+
+#submitbutton {
+	margin-top:15px;
 }
 
 #footer {
